@startuml

package Altitude {
    interface AltitudeProfile {
            -addAltitudeValues(): List<Object>
        }
        abstract class AltitudeTemplate {
            -maxAlt: int
            ---
            -findVerticesIndex(p: Polygon, slist: List<Segment>): Set<Integer>
            +setVertexAltitude(vlist: List<Vertex>, vInts: Set<Integer>): List<Vertex>
            #distance(x1: double, x2: double, y1: double, y2: double): double
            ---
            ~averageAltitude(vlist, vInts): int
            -createAnswerList(plist: List<Polygon>, slist, vlist): List<Object>
            +smoothenVertices(plist, vlist, vpc: VertexPolygonConnections): List<Vertex>
        }
        class Mountain {
            -generateMountainRange(): List<Line2D>
            +minDistanceMountainRange(p: Polygon, vModList: List<Vertex>, lines: List<Line2D>): double
        }
        class MountainAltitude {
            -<<override>> addAltitudeValues()
            +<<override>> setVertexAltitude()
        }
        class RandomAltitude {
            -<<override>> addAltitudeValues()
        }
        class VolcanoAltitude {
            -distance: double
            ---
            -<<override>> addAltitudeValues()
            +<<override>> setVertexAltitude()
            #findIslandCentre(): double
        }
        AltitudeProfile <|.. AltitudeTemplate
        AltitudeTemplate <|-- MountainAltitude
        AltitudeTemplate <|-- RandomAltitude
        AltitudeTemplate <|-- VolcanoAltitude
        MountainAltitude ..> Mountain
}

package Extractors {
    interface Extractor {
        -getValue(properties: List<Property>, key: String): String
        +extractValues(properties: List<Property>): String

    }
    class AltitudeExtractor {
        -<<override>> extractValues(): String
    }
    class TileTagExtractor {
        -<<override>> extractValues(): String
    }
    Extractor <|.. AltitudeExtractor
    Extractor <|.. TileTagExtractor
}

package RandomNumberGenerator {
    class RandomNumber {
        -randomInstance: Random
        ---
        -setSeed(): void
        +setSeed(long): void
    }
}

AltitudeProfile ..> Extractor
AltitudeProfile ..> RandomNumber

@enduml